--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Mozilla is cool</h1>
-    <img src="images/mozilla-firefox-icon-blue.png" alt="The Firefox BDSM logo: a flaming fox surrounding the Earth.">
+    <img src="images/mozilla-firefox-icon-blue.png" alt="The Firefox BSM logo: a flaming fox surrounding the Earth.">
 
     <p>At Mozilla, we’re a global-ish community of</p>
 
