--- a/mozillaiscool.html
+++ b/mozillaiscool.html
@@ -10,6 +10,10 @@
     <h1>Mozilla is cool</h1>
     <img src="images/mozilla-firefox-icon-blue.png" alt="The Firefox BSM logo: a flaming fox surrounding the Earth.">
 
+     <script>
+          alert( 'Hello, world1!' );
+     </script>
+    
     <p>At Mozilla, we’re a global-ish community of</p>
 
     <ul> <!-- changed to list in the tutorial -->
