--- a/mozillaiscool.html
+++ b/mozillaiscool.html
@@ -7,7 +7,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
+    <h1>Mozilla is cool, most of the time</h1>
     <img src="images/mozilla-firefox-icon-blue.png" alt="The Firefox BSM logo: a flaming fox surrounding the Earth.">
 
      <script>
