--- a/mozillaiscool.html
+++ b/mozillaiscool.html
@@ -7,12 +7,19 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Mozilla is cool, most of the time</h1>
+    <h1>Mozilla is cool 99</h1>
     <img src="images/mozilla-firefox-icon-blue.png" alt="The Firefox BSM logo: a flaming fox surrounding the Earth.">
 
      <script>
-          alert( 'Hello, world1!' );
+          alert( 'Hello, world99!' );
      </script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://cdn.blockspring.com/blockspring.js"></script>
+    <script>
+      blockspring.runParsed("query-public-google-spreadsheet", { "query": SELECT A, B, C, D, E, F, G, H, I, J, K, L, M, "url": https://docs.google.com/spreadsheets/d/1j0mWkw0M4CpX4Ah0aXvsJXgeNdRUmB13THyk1XY0CWU/edit?usp=sharing}, { "api_key": "br_109195_00e94f6d90254ddd5b96b4863e760427f18cb81c" }, function(res){
+        console.log(res.params);
+     })
+    </script>
     
     <p>At Mozilla, we’re a global-ish community of</p>
 
