--- a/mozillaiscool.html
+++ b/mozillaiscool.html
@@ -32,7 +32,7 @@
     })
     </script>
     
-    <h1>Mozilla is cool 91</h1>
+    <h1>Mozilla is cool, but Blockspring seems kinda sucky or at least I can't get it to work yet.</h1>
     <img src="images/mozilla-firefox-icon-blue.png" alt="The Firefox BSM logo: a flaming fox surrounding the Earth.">
     
     <p>At Mozilla, we’re a global-ish community of</p>
