--- a/usingtabletop.html
+++ b/usingtabletop.html
@@ -20,8 +20,10 @@
     </script>
     -->
     
+    <script>
     alert('Davida: Number 100!');
-   
+    </script>
+    
     <!--
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="https://cdn.blockspring.com/blockspring.js"></script>
